quic/s2n-quic-transport/src/path/manager/snapshots/quic__s2n-quic-transport__src__path__manager__tests__events__connection_migration_use_max_ack_delay_from_active_path.snap
---
source: quic/s2n-quic-transport/src/path/manager/tests.rs
expression: ""
---
PathCreated { active: Path { local_addr: 0.0.0.0:0, local_cid: 0x4c6f63616c4900000000000000004c6f63616c49, remote_addr: 127.0.0.1:8001, remote_cid: 0x01, id: 0, is_active: true }, new: Path { local_addr: 0.0.0.0:0, local_cid: 0x4c6f63616c4900000000000000004c6f63616c49, remote_addr: 127.0.0.2:8001, remote_cid: 0x01, id: 1, is_active: false } }
MtuUpdated { path_id: 1, mtu: 1200 }
